--- a/server/templates/result.html
+++ b/server/templates/result.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-success btn-lg ml-2"
-                    onclick="">Скачать
+            <button type="button" class="btn btn-success btn-lg mr-2" onclick="window.location.href='/uploads/result.mpg'">
+                Скачать
             </button>
            <h2><span class="badge badge-info" id="formatTypeBadge">.MPG</span></h2>
     </div>
